<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.aggregation.AggregationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="horizontal">

            <View
                android:id="@+id/backIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/black_ops_one_regular"
                android:text="@string/new_task"
                android:textColor="@color/primary_color_text"
                android:textSize="20sp" />
        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.05"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarlayout"
        app:layout_constraintBottom_toTopOf="@+id/dateTimeLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LoginTextInputLayoutStyle"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_voice"
            app:endIconTint="@color/primary_color_text"
            android:textColorHint="@color/primary_color_text"
            app:hintTextColor="@color/primary_color_text"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/primary_color_text"
                android:hint="@string/input_task_name"
                android:inputType="textCapSentences"
                android:textCursorDrawable="@color/primary_color_text" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/dateTimeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LoginTextInputLayoutStyle"
            android:textColorHint="@color/primary_color_text"
            app:hintTextColor="@color/primary_color_text"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/ic_calendar"
            app:startIconTint="@color/primary_color_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:textSize="12sp"
                android:textColor="@color/primary_color_text"
                android:focusable="false"
                android:textCursorDrawable="@color/background_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LoginTextInputLayoutStyle"
            android:textColorHint="@color/primary_color_text"
            app:hintTextColor="@color/primary_color_text"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/ic_time"
            app:startIconTint="@color/primary_color_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_time"
                android:textSize="12sp"
                android:textColor="@color/primary_color_text"
                android:focusable="false"
                android:textCursorDrawable="@color/background_color" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/notificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_notification" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:trackTint="@color/secondary_color"
            app:thumbTint="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/addTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_color"
        android:text="@string/create_task"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationLayout"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>